--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
 User Name = :  <input type = "text" name = "username" value ="{{username}}">
 Password  = :  <input type = "password" name = "password" value = "{{password}}"> 
 
-<button>Log in </button>
+<button (click)= handleLogIn()>Log in </button>
