--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,9 +11,9 @@
 
 <app-welcome></app-welcome>
 -->
-
+<!--
 <app-login></app-login>
-
+-->
 <!--
 
 <div> Component content </div>
@@ -29,6 +29,6 @@
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
 </ul>
-
-<router-outlet></router-outlet>
+</div>
 -->
+<router-outlet></router-outlet>
