--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,3 +1,7 @@
-<p>
-  welcome works!
-</p>
+<div>
+Welcome {{name}},
+     to our Awesome app.</div>
+
+<div>
+You can manage your todos <a routerLink = "/todos">here</a>
+</div>
