--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,4 +31,9 @@
 </ul>
 </div>
 -->
-<router-outlet></router-outlet>
+
+<app-menu></app-menu>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
+<app-footer> </app-footer>
