--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,12 @@
-<small *ngIf='invalidLogIn'>{{errorMessage}}</small>
+<H1>LogIn!</H1>
+
+<div class ="container">
+<div class ='alert alert-warning' *ngIf='invalidLogIn'>{{errorMessage}}</div>
 <div>
 
   User Name = :  <input type = "text" name = "username" [(ngModel)] ="username">
   Password  = :  <input type = "password" name = "password" [(ngModel)] ="password">  
   <!--Username = {{username}}; To check binding-->
-  <button (click)= handleLogIn()>Log in </button>
+  <button (click)= handleLogIn() class="btn btn-success">Log in </button>
+</div>
 </div>
