--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,14 +4,23 @@
       <a href="https://www.in28minutes.com" class = "navbar-brand">in28minutes</a>
     </div>
     <ul class="navbar-nav">
-      <!-- <li><a href="/welcome/in28minutes" class="nav-link">Home</a></li> -->
-      <li><a routerLink="/welcome/in28minutes" class="nav-link">Home</a></li>
-      <li><a routerLink="/todos" class="nav-link">Todos</a>
+
+      <!-- //we have to wait for refresh to happen for below code to reflect 
+        <li><a href="/welcome/in28minutes" class="nav-link">Home</a></li> -->
+      <!-- <li><a *ngIf="isUserLoggedIn" routerLink="/welcome/in28minutes" class="nav-link">Home</a></li>
+      <li><a *ngIf="isUserLoggedIn" routerLink="/todos" class="nav-link">Todos</a> 
+      -->
+
+        <li><a *ngIf="this.HardCodedAutenticationService.isUserLoggedIn()" routerLink="/welcome/in28minutes" class="nav-link">Home</a></li>
+        <li><a *ngIf="this.HardCodedAutenticationService.isUserLoggedIn()" routerLink="/todos" class="nav-link">Todos</a>
       </li>
     </ul>
     <ul class="navbar-nav navbar-collapse justify-content-end">
-      <li><a routerLink="/login" class="nav-link">LogIn </a></li>
-      <li><a routerLink="/logout" class="nav-link">LogOut</a>
+      <!-- <li><a *ngIf="!isUserLoggedIn" routerLink="/login" class="nav-link">LogIn </a></li>
+      <li><a *ngIf="isUserLoggedIn" routerLink="/logout" class="nav-link">LogOut</a> -->
+
+        <li><a *ngIf="!this.HardCodedAutenticationService.isUserLoggedIn()" routerLink="/login" class="nav-link">LogIn </a></li>
+      <li><a *ngIf="this.HardCodedAutenticationService.isUserLoggedIn()" routerLink="/logout" class="nav-link">LogOut</a>
       </li>
     </ul>
 
