--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,8 +4,8 @@
 <div class ='alert alert-warning' *ngIf='invalidLogIn'>{{errorMessage}}</div>
 <div>
 
-  User Name = :  <input type = "text" name = "username" [(ngModel)] ="username">
-  Password  = :  <input type = "password" name = "password" [(ngModel)] ="password">  
+  User Name = :  <input type = "text" name = "username" >
+  Password  = :  <input type = "password" name = "password">  
   <!--Username = {{username}}; To check binding-->
   <button (click)= handleLogIn() class="btn btn-success">Log in </button>
 </div>
