--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -2,8 +2,14 @@
 
 <div class="container">
 Welcome {{name}},
-     to our Awesome app.</div>
-
-<div>
+     to our Awesome app.
 You can manage your todos <a routerLink = "/todos">here</a>
+</div>
+
+<div class="container">
+click here to get a customized welcome message <button (click)="getWelcomeMessage()" class = "btn btn-success">Get Welcome message</button></div>
+
+<div class="container" *ngIf="welcomeMessageFromService">
+<H2>your customized welcome message</H2>
+{{welcomeMessageFromService}}
 </div>
